# createSnapShot_QTcreator

./: CMakeLists.txt  CMakeLists.txt2  MapObject.cpp  MapObject.h  Screen.pro  capturethread.cpp  capturethread.h  main.cpp  snapshotapp.cpp  snapshotapp.h
build2/: CMakeCache.txt  Screen  cmake_install.cmake
build2/.qt/: QtDeploySupport.cmake
build2/Screen_autogen/: mocs_compilation.cpp
build2/Screen_autogen/EWIEGA46WW/: moc_capturethread.cpp.d  moc_snapshotapp.cpp.d
